# qobuz-downloader

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml  ui_ux_replication_plan.md
.specify/: feature.json
specs/003-qobuz-download-gui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-qobuz-download-gui/checklists/: requirements.md
specs/003-qobuz-download-gui/contracts/: message-types.md
src/: app.rs  dashboard.rs  errors.rs  instrument.rs  main.rs  types.rs  ui.rs  window.rs
src/auth/: keyring.rs  login_view.rs  mod.rs  session.rs
src/browse/: album_view.rs  artist_view.rs  common_imports.rs  detail_common.rs  mod.rs  playlist_view.rs
src/cover_art/: cache.rs  mod.rs
src/download/: manager.rs  mod.rs  progress.rs  view.rs  worker.rs
src/preferences/: dialog.rs  mod.rs  settings.rs
src/search/: controller.rs  mod.rs  view.rs
src/ui/: login.rs  main_window.rs  search.rs  settings.rs
src/ui/login/: auth.rs  credentials.rs  signals.rs  ui.rs  window.rs
src/ui/settings/: config.rs  dialog.rs
