[package]
edition = "2024"
name = "qobuz-downloader-rs"
version = "0.1.0"

[dependencies]
libadwaita = { version = "0.8.1", features = [
    "gio_v2_80",
    "gtk_v4_20",
    "v1_8",
] }
qobuz-api-rust = "0.2.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
